--- a/test-scenarios/bookinfo-lab/k8s/bookinfo.yaml
+++ b/test-scenarios/bookinfo-lab/k8s/bookinfo.yaml
@@ -173,7 +173,54 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: bookinfo-reviews
-
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: reviews-v1
+  labels:
+    app: reviews
+    version: v1
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: reviews
+      version: v1
+  template:
+    metadata:
+      labels:
+        app: reviews
+        version: v1
+    spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: purpose
+                operator: In
+                values:
+                - apps
+      serviceAccountName: bookinfo-reviews
+      containers:
+      - name: reviews
+        image: istio/examples-bookinfo-reviews-v1:1.15.0
+        imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "10m"
+          limits:
+            memory: "1Gi"
+            cpu: "400m"
+        ports:
+        - containerPort: 9080
+      tolerations:
+        - key: "apps"
+          operator: "Equal"
+          value: "true"
+          effect: "NoSchedule"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -207,6 +254,54 @@ spec:
       containers:
       - name: reviews
         image: istio/examples-bookinfo-reviews-v2:1.15.0
+        imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "10m"
+          limits:
+            memory: "1Gi"
+            cpu: "400m"
+        ports:
+        - containerPort: 9080
+      tolerations:
+        - key: "apps"
+          operator: "Equal"
+          value: "true"
+          effect: "NoSchedule"
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: reviews-v3
+  labels:
+    app: reviews
+    version: v3
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: reviews
+      version: v3
+  template:
+    metadata:
+      labels:
+        app: reviews
+        version: v3
+    spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: purpose
+                operator: In
+                values:
+                - apps
+      serviceAccountName: bookinfo-reviews
+      containers:
+      - name: reviews
+        image: istio/examples-bookinfo-reviews-v3:1.15.0
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -292,4 +387,3 @@ spec:
           operator: "Equal"
           value: "true"
           effect: "NoSchedule"
----
